# multimidia

./: CMakeLists.txt  README.md  baboon_ascii_encoded  compressor.cpp  compressor.h  decode.cpp  decoder.cpp  decoder.h  encode.cpp  encoded.codestream  encoder.cpp  encoder.h  lena_ascii_encoded  lena_ascii_rec.pgm  main.cpp  quadrado_ascii_encoded  quadrado_ascii_rec.pgm
new_tests/: baboon_enc_test
